--- a/bellabeat_case_study_Collab.ipynb
+++ b/bellabeat_case_study_Collab.ipynb
@@ -415,7 +415,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv(\"dailyActivity_merged.csv\")"
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/Jc-martinez95/Bellabeat/main/dailyActivity_merged.csv")"
       ]
     },
     {
