--- a/bellabeat_case_study_Collab.ipynb
+++ b/bellabeat_case_study_Collab.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Jc-martinez95/Bellabeat/blob/main/bellabeat_case_study_Collab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "ba9658ab",
       "metadata": {
         "papermill": {
@@ -310,7 +320,7 @@
         "outputId": "765bb174-e92a-4186-8dea-2a3c06eb17c2"
       },
       "id": "nspqdQveUBTf",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "98bff900",
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -394,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "8d1d309e",
       "metadata": {
         "execution": {
@@ -415,7 +425,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv(\"https://raw.githubusercontent.com/Jc-martinez95/Bellabeat/main/dailyActivity_merged.csv")"
+        "df = pd.read_csv(\"dailyActivity_merged.csv\")"
       ]
     },
     {
@@ -440,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "4494b78c",
       "metadata": {
         "execution": {
@@ -499,7 +509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "1bb0ec1d",
       "metadata": {
         "execution": {
@@ -563,7 +573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "b3864e38",
       "metadata": {
         "execution": {
@@ -997,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "dae74ad8",
       "metadata": {
         "execution": {
@@ -1075,7 +1085,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "41eba05e",
       "metadata": {
         "execution": {
@@ -1174,7 +1184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "3a9fc3ce",
       "metadata": {
         "execution": {
@@ -1627,7 +1637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "6782b709",
       "metadata": {
         "execution": {
@@ -1674,7 +1684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "0ec07c58",
       "metadata": {
         "execution": {
@@ -1758,7 +1768,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "373d1a27",
       "metadata": {
         "execution": {
@@ -1806,7 +1816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "363f36ef",
       "metadata": {
         "execution": {
@@ -1883,7 +1893,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "906bc999",
       "metadata": {
         "execution": {
@@ -1959,7 +1969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "06677c40",
       "metadata": {
         "execution": {
@@ -2042,7 +2052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "364af88f",
       "metadata": {
         "execution": {
@@ -2131,7 +2141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "e7827cb2",
       "metadata": {
         "execution": {
@@ -2197,7 +2207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "de4cea4f",
       "metadata": {
         "execution": {
@@ -2306,7 +2316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "861fc212",
       "metadata": {
         "execution": {
@@ -2384,7 +2394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "b84f45eb",
       "metadata": {
         "execution": {
@@ -2714,7 +2724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "1037a2a9",
       "metadata": {
         "execution": {
@@ -2801,7 +2811,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "65d121ff",
       "metadata": {
         "execution": {
@@ -2903,7 +2913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "baa8779e",
       "metadata": {
         "execution": {
@@ -2994,7 +3004,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "b193e811",
       "metadata": {
         "execution": {
@@ -3186,7 +3196,8 @@
       "version": "2.4.0"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
