Creado mediante Colaboratory

--- a/bellabeat_case_study_Collab.ipynb
+++ b/bellabeat_case_study_Collab.ipynb
@@ -308,31 +308,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#from google.colab import drive\n",
-        "#drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "nspqdQveUBTf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "765bb174-e92a-4186-8dea-2a3c06eb17c2"
-      },
-      "id": "nspqdQveUBTf",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "98bff900",
       "metadata": {
@@ -356,7 +331,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
         "import numpy as np # linear algebra\n",
         "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
         "import matplotlib.pyplot as plt\n",
@@ -425,7 +399,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv(\"dailyActivity_merged.csv\")"
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/Jc-martinez95/Bellabeat/main/dailyActivity_merged.csv\")"
       ]
     },
     {
